# MSBRDM

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
noetic_ubuntu20/: libtum-ics-tools-common_0.0.0-1_amd64.deb  libtumtools-common_0.0.0-1_amd64.deb  libtumtools-eigen_0.0.0-1_amd64.deb  libtumtools-math_0.0.0-1_amd64.deb  libtumtools-rtthreads_0.0.0-1_amd64.deb  libtumtools-threads_0.0.0-1_amd64.deb  ros-noetic-tum-ics-lacquey-gripper-msgs_0.0.0-1_amd64.deb  ros-noetic-tum-ics-msgs_0.0.0-1_amd64.deb  ros-noetic-tum-ics-ur-robot-controllers_0.0.0-1_amd64.deb  ros-noetic-tum-ics-ur-robot-lli_0.0.0-1_amd64.deb  ros-noetic-tum-ics-ur-robot-manager_0.0.0-1_amd64.deb  ros-noetic-tum-ics-ur-robot-msgs_0.0.0-1_amd64.deb  tum-ics-libconfig1_0.0.0-1_all.deb
src/image_to_traj/: CMakeLists.txt  package.xml
src/image_to_traj/scripts/: gcode_converter_potrace.py  gen_traj_node.py  image_to_traj.py  test_skeletonize.py  trajectory_generator.py
src/model/ur_model/: CMakeLists.txt  package.xml
src/model/utilities/control_core/: CMakeLists.txt  README.md  package.xml
src/model/utilities/control_core/include/control_core/: algorithms.h  configuration.h  conversions.h  math.h  types.h
src/model/utilities/control_core/include/control_core/algorithms/: i_scalar_algorithm.h  i_scalar_differentiation.h  i_scalar_filter.h  matrix_algorithm.h  scalar_butterworth_filter.h  scalar_exponential_decay_filter.h  scalar_finite_difference.h  state_differentiator.h  state_integrator.h
src/model/utilities/control_core/include/control_core/common/: parameter.h  ros.h
src/model/utilities/control_core/include/control_core/eigen/: quaternion_ref.h
src/model/utilities/control_core/include/control_core/geometry/: geometry_2d.h  geometry_3d.h  i_shape.h  shapes.h
src/model/utilities/control_core/include/control_core/math/: cross_product.h  error_functions.h  maps.h  pseudo_inverse.h  quaternion.h  random_orientation.h  transform.h
src/model/utilities/control_core/include/control_core/test_utilities/: gtest.h
src/model/utilities/control_core/include/control_core/trajectory/: i_trajectory.h  piecewise_trajectory_base.h  polynomial.h  polynomial_trajectories.h  polynomial_trajectory.h  spline_trajectory.h  state_trajectories.h  state_trajectory.h
src/model/utilities/control_core/include/control_core/type_bases/: angular_acceleration_base.h  angular_position_base.h  angular_velocity_base.h  cartesian_base.h  force_base.h  jacobian_base.h  linear_acceleration_base.h  linear_position_base.h  linear_state_base.h  linear_velocity_base.h  matrix_base.h  moment_base.h  quaternion_base.h  rotation3_base.h  rotation_base.h  state_base.h  vector3_base.h  vector_base.h
src/model/utilities/control_core/include/control_core/type_references/: angular_acceleration_ref.h  angular_position_ref.h  angular_velocity_ref.h  force_ref.h  jacobian_ref.h  joint_ref.h  joint_state_ref.h  linear_acceleration_ref.h  linear_position_ref.h  linear_velocity_ref.h  matrix_ref.h  moment_ref.h  quaternion_ref.h  rotation3_ref.h  vector3_ref.h  vector_ref.h
src/model/utilities/control_core/include/control_core/types/: angular_acceleration.h  angular_position.h  angular_state.h  angular_velocity.h  cartesian_acceleration.h  cartesian_position.h  cartesian_state.h  cartesian_vector.h  cartesian_velocity.h  force.h  force_torque_sensor.h  homogeneous_transformation.h  inertial_measurment_unit_sensor.h  jacobian.h  joint_acceleration.h  joint_effort.h  joint_position.h  joint_state.h  joint_velocity.h  linear_acceleration.h  linear_position.h  linear_state.h  linear_velocity.h  matrix.h  moment.h  rotation3.h  spatial_vector.h  vector3.h  vector_dof.h  wrench.h
src/model/utilities/control_core/include/control_core/utilities/: eigen_typedef_macros.h  forward_declarations.h  rt_thread.h  smart_ptr.h  support_templates.h  thread.h  type_guard.h  type_not_assignable.h
src/model/utilities/control_core/src/: conversions.cpp
src/model/utilities/control_core/src/applications/: main_geometry.cpp  main_polynomial.cpp  main_spline.cpp
src/model/utilities/control_core/src/math/: reference_frames.cpp
src/model/utilities/control_core_msgs/: CMakeLists.txt  README.md  package.xml
src/model/utilities/control_core_msgs/msg/: CartesianStateTrajectory.msg  JointStateTrajectory.msg  LinearStateTrajectory.msg
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_driver/: CMakeLists.txt  package.xml
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_driver/include/tum_ics_lacquey_gripper_driver/: Defs.h  GripperDriver.h  JointState.h  JointStatePub.h
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_driver/launch/: lacquey_gripper_driver_left.launch  lacquey_gripper_driver_right.launch  lacquey_gripper_driver_ur10.launch
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_driver/launch/configs/: namespacePrefixes.yaml  namespacePrefixesUr10.yaml
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_driver/src/: GripperDriver.cpp  JointState.cpp  JointStatePub.cpp
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_driver/src/Applications/: main_lacquey_gripper_driver.cpp
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_msgs/: CMakeLists.txt  package.xml
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_msgs/msg/: GripperState.msg
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_msgs/srv/: getGripperState.srv  setGripperState.srv
src/tum_ics_schunk_netbox/: CMakeLists.txt  README.md  package.xml
src/tum_ics_schunk_netbox/config/: config.yaml
src/tum_ics_schunk_netbox/launch/: sensor_publisher.launch
src/tum_ics_schunk_netbox/src/: minimal_node_main.cpp
src/tum_ics_ur10_controller_tutorial/: CMakeLists.txt  package.xml
src/wsg_50_common/: CMakeLists.txt  README.md  package.xml
src/wsg_50_driver/: CMakeLists.txt  README.md  package.xml
src/wsg_50_driver/launch/: wsg_50_tcp.launch  wsg_50_tcp_script.launch  wsg_50_udp_script.launch
src/wsg_50_driver/src/: common.cpp  main.cpp  main_can.cpp  open_close_test.py
src/wsg_50_driver/urdf/: wsg_50.urdf.xacro
(+59 files in other folders)
