<?xml version="1.0"?>
<package>
  <name>tum_ics_lacquey_gripper_driver</name>
  <version>0.0.0</version>
  <description>The lacquey gripper driver package</description>

  <author email="florian.bergner@tum.de">Florian Bergner</author>
  <maintainer email="florian.bergner@tum.de">Florian Bergner</maintainer>
  <url type="website">http://ics.ei.tum.de</url>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tum_ics_lacquey_gripper_msgs</build_depend>
  <build_depend>tum_ics_ur_robot_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tum_ics_lacquey_gripper_msgs</run_depend>
  <run_depend>tum_ics_ur_robot_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
