<?xml version="1.0"?>
<package>
  <name>tum_ics_lacquey_gripper_msgs</name>
  <version>0.0.0</version>
  <description>The messages for the lacquey gripper</description>

  <author email="florian.bergner@tum.de">Florian Bergner</author>
  <maintainer email="florian.bergner@tum.de">Florian Bergner</maintainer>
  <maintainer email="dean@tum.de">Emmanuel Dean</maintainer>
  <url type="website">http://ics.ei.tum.de</url>
  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
