<?xml version="1.0"?>
<package format="2">
  <name>control_core_msgs</name>
  <version>0.0.0</version>
  <description>Customized ROS messages for Control</description>

  <maintainer email="simon.armleder@tum.de">Simon Armleder</maintainer>

  <license>Apache 2.0</license>

  <author email="simon.armleder@tum.de">Simon Armleder</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- "depend" is equivalent to build_depend + exec_depend -->
  <!--  Cross-check with find_package in CMakeLists-->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- Dependencies needed to build agains this package -->
  <!--  Cross-check with CATKIN_DEPENDS catkin_package in CMakeLists-->
  <build_export_depend>message_generation</build_export_depend>

  <!--  Dependencies for testing-->
  <test_depend>rosunit</test_depend>

  <!--Dependencies for documentation-->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
